--- a/vars/ubuntu.yml
+++ b/vars/ubuntu.yml
@@ -8,4 +8,7 @@ node_version: "14.20.0"
 npm_version:  "6.14.15"
 
 #nginx version
+#nginx installs its latest stable version so this var is not included
 nginx_version: "latest-stable"
+
+
