--- a/tasks/Ubuntu-mongodb.yml
+++ b/tasks/Ubuntu-mongodb.yml
@@ -15,6 +15,7 @@
   ansible.builtin.apt_key:
     url:  https://www.mongodb.org/static/pgp/server-5.0.asc
     state: present
+  ignore_errors: true
 
 - name: add Mongodb Repository
   ansible.builtin.apt_repository:
@@ -22,6 +23,12 @@
     state: present
   notify: apt_update
   ignore_errors: true
+
+- name: making sure that repo and key are added
+  ansible.builtin.shell: |
+    wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | sudo apt-key add - |
+    echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu $( lsb_release -cs)/mongodb-org/5.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-5.0.list
+  notify: apt_update
 
 - name: install Mongodb
   ansible.builtin.apt:
